# pyarchall

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
pyarchall/: downloader.py  main.py
