
[tool.poetry]
name = "pyarchall"
version = "0.0.1"
description = "PYthon package to ARCHive ALL versions of single python packge"
authors = ["Alon David <alondavid13@gmail.com>"]

[tool.poetry.scripts]
pyarchall = "pyarchall:main.main"

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "*"
aiohttp = "*"
BeautifulSoup4 = "*"
fire = "*"
tqdm = "*"
requests = "*"


[tool.poetry.dev-dependencies]
pre-commit = "*"
bump2version = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
